# hachillesworld

./: .env.example  .gitignore  .htmlhintrc  CHANGELOG.md  Dockerfile  MCTS_Planning_Depth_설명.md  README.md  docker-compose.yml  make_pdf.py  pyproject.toml  requirements.txt  test_flow.py  test_flow_local.py
.claude/commands/: blog-add.md
.github/workflows/: ci.yml  pages.yml
config/: prometheus.yml
docs/: CA_MEASUREMENT_GUIDE.md  DATA_FLOW.md  HAchillesWorld_기획서.md  HAchillesWorld_인증_프로그램.md  admin_operations_guide.md  arxiv_haw_tr003.md  arxiv_haw_tr003_ko.md  arxiv_paper_tr002.md  blog_add_workflow_prompt.md  blue_ocean_strategy.md  brainstorming_expert_review.md  customer_consent_form_v1.0.md  data_governance_policy_v1.0.md  disaster_recovery_plan_v1.0.md  eu_dpa_incident_response_v1.0.md  eu_dpa_mock_drill_v1.0.md  hachillesworld_vision_qa_session.md  haw_study_002_protocol.md  nav_design.md  owasp_security_audit_v1.0.md  privacy_policy_v1.0.md  scamper_deep_dive.md  개발완료보고서.md  사용자가이드.md  사용자가이드_v2.1.md  컨설팅_방법론.md
docs/analysis/: multicollinearity_study001.md
docs/standards/: iitp_trl_mapping.md  tta_standard_proposal.md
docs/study_onboarding/: README_participant.md  data_consent_template.md  kpi_survey_template.md  sdk_install_guide.md
docs/upgrade_prompts/: progress.md
docs/v2.1_prompts/: progress_v21.md
examples/: basic_scan.py  sdk_integration.py
landing/: admin.html  blog-agent-cost-optimization.html  blog-agent-diagnostic-evolution.html  blog-arxiv-paper.html  blog-deployment-checklist.html  blog-glossary.html  blog-harness-guide.html  blog-mcts-planning-depth.html  blog-multi-agent-collaboration.html  blog-planning-depth-cost.html  blog-recognition-certification.html  blog-user-guide.html  blog-v3-roadmap.html  blog-why-world-model.html  blog-world-model.html  blog.html  cert.html  haw-analytics.js  index-en.html  index.html  operate.html  optimize.html  optimize_report.html  package.json  report.html  scan.html  tailwind.config.ts
landing/app/: globals.css  layout.tsx
landing/app/dashboard/: layout.tsx  page.tsx
landing/app/dashboard/[agent_id]/: AgentDetailClient.tsx  page.tsx
landing/app/dashboard/group/: page.tsx
landing/app/dashboard/settings/: page.tsx
landing/app/privacy/: page.tsx
landing/app/signup/: page.tsx
landing/components/: ConsentBanner.tsx  DriftTimeline.tsx  HASGauge.tsx  HarnessRuleList.tsx  MetricsRadar.tsx  Sidebar.tsx
landing/lib/: api.ts  types.ts
landing/public/: admin.html  blog-mcts-planning-depth.html  cert.html  index.html  operate.html  optimize.html  optimize_report.html  report.html  scan.html
scripts/: aws_kms_backup_verify.py  aws_kms_backup_verify.sh  e2e_flow_test_v21.py  full_flow_test_v21.py  run_multicollinearity.py
src/hachillesworld/: __init__.py  cli.py
src/hachillesworld/analyze/: __init__.py  correlation.py  multicollinearity.py  study_analysis.py
src/hachillesworld/api/: __init__.py  middleware.py  schemas.py  server.py  state.py
src/hachillesworld/api/routers/: __init__.py  compliance.py  email_unsubscribe.py  group.py  operate.py  scan.py  study.py
src/hachillesworld/audit/: __init__.py  logger.py
src/hachillesworld/collect/: __init__.py  collector.py  episode.py  flush.py  log_pipeline.py  study_client.py
src/hachillesworld/compliance/: __init__.py  eu_ai_act.py  iso42001.py
src/hachillesworld/core/: __init__.py  client.py  config.py  domain_config.py  instrument.py  models.py
src/hachillesworld/integrations/: __init__.py  mlflow_logger.py
src/hachillesworld/interpret/: __init__.py  has_interpreter.py
src/hachillesworld/operate/: __init__.py  harness_validator.py  meta_harness.py  monitor.py  recalibrator.py  replay.py
src/hachillesworld/optimize/: __init__.py  harness_generator.py  multi_agent.py  roadmap.py
src/hachillesworld/privacy/: __init__.py  data_classifier.py
src/hachillesworld/scan/: __init__.py  counterfactual_evaluator.py  engine.py  incident_tracker.py  metrics.py  ood_detector.py  planning_depth.py  wmul_tracker.py
src/hachillesworld/scan/domains/: code_generation.yaml  customer_service.yaml  finance.yaml  healthcare.yaml  research.yaml  supply_chain.yaml
src/hachillesworld/scan/judge/: base.py  (+4 more)
src/hachillesworld/storage/: __init__.py  base.py  memory.py  postgres.py  sqlite.py
tests/: conftest.py  test_api_endpoints.py  test_audit.py  test_cli_collect.py  test_collect.py  test_compliance.py  test_counterfactual_accuracy.py  test_domain_config.py  test_drift_classification.py  test_harness_conflict.py  test_harness_validation.py  test_has_reliability.py  test_interpreter.py  test_irt_wmul_tracking.py  test_judge_backends.py  test_multi_agent.py  test_multicollinearity.py  test_ood_detection.py  test_operate.py  test_optimize.py  test_planning_depth_probing.py  test_privacy.py  test_replay_counterfactual.py  test_scan.py  test_storage.py  test_study_analysis.py  test_study_pipeline.py
validation/: has_calculator.py  run_study.py  sample_data.py
validation/analysis/: correlation.py
validation/metrics/: wm_quality.py
(+1 files in other folders)
