[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hachillesworld"
version = "0.1.0"
description = "World Model 진단 및 최적화 플랫폼 — HAchillesWorld"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "박성훈" }]
keywords = ["world-model", "agent-diagnostics", "agentops", "llm"]

dependencies = [
    "anthropic>=0.101.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "jinja2>=3.1.4",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.4.4",
]
ml = [
    "torch>=2.3.0",
]

[project.scripts]
hachillesworld = "hachillesworld.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
